--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "Backend server for AI-powered trip planner",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node --no-warnings server.js",
+    "dev": "nodemon server.js",
+    "start:comparison": "node --no-warnings comparisonserver.js",
+    "dev:comparison": "nodemon comparisonserver.js",
+    "start:both": "concurrently \"npm run dev\" \"npm run dev:comparison\"",
+    "start:prod": "concurrently \"npm start\" \"npm run start:comparison\""
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,7 +19,8 @@
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "concurrently": "^8.2.2"
   },
   "keywords": [
     "trip-planner",
